--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
 </head>
 
 <body>
-<div id="container" class="container">
-    <div class="bubble">
-
-    </div>
-</div>
 
 <button id="add" class="add" onclick="addBubble()">
     Add
 </button>
 
-<button id="remove" class="remove">
+<button id="remove" class="remove" onclick="removeBubble()">
     Remove
 </button>
+
+<button id="removeall" class="removeall" onclick="removeAllBubble()">
+    Remove All
+</button>
+
+<div id="container" class="container">
+    <div class="bubble">
+
+    </div>
+</div>
 
 
 <script src="index.js">
