Change color and size, remove on click

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     Remove All
 </button>
 
+<input type="text" id="color-input" class="colorinput" placeholder="Choose your color:">
+
+<input type="number" id="size-input" class="sizeinput" placeholder="Choose your size:" min="1">
+
 <div id="container" class="container">
 
 </div>
